--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">MVVM</string>
+    <string name="app_name">MVVM Retrofit</string>
+
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+    <string name="choice_today">Escolha de hoje</string>
 </resources>
